# DarkQuest

./: .gitignore  Intro.MD  README.md  introduction.md
cosmics/: TaiwanTDC_SQcosmics.ipynb
cosmics/data/: param_2020012301.tsv
e1039-analysis/: README.MD
e1039-analysis/CountEvents/: CountFiredEvents.ipynb  Functions.cc  README.md  setup.sh
e1039-analysis/DataHits/: CMakeLists.txt  README.MD  submit.sh
e1039-analysis/DataHits/exe/: dataTuple.cxx
e1039-analysis/DataHits/inc/: GlobalConsts.h  SRawEventLinkDef.h
e1039-analysis/DataHits/macro/: DSTToTree.C  README.MD  RecoE906Data.C  geom.root  setup.sh  setup_mye1039.sh
e1039-analysis/DataHits/macro/AnaModule/: AnaModule.cxx  AnaModule.h  CMakeLists.txt
e1039-analysis/DataHits/src/: SRawEvent.cc  SRawEvent.h  SRawEventDict.cxx  SRawEventDict.h
e1039-analysis/HitEmbedding/: .gitignore  README.md  setup.sh  setup_my1039.sh
e1039-analysis/HitEmbedding/macro_ana/: AnaBothData.C  AnaOneData.C  Fun4All.C  README.md  make-dst-list.sh
e1039-analysis/HitEmbedding/macro_ana/embedded/: info_dst.txt  list_dst.txt
e1039-analysis/HitEmbedding/macro_ana/not_embedded/: info_dst.txt  list_dst.txt
e1039-analysis/HitEmbedding/macro_embed/: Fun4Sim.C  README.md  gridrun.sh  gridsub.sh  info_list.txt  list_emb_file.txt  list_sig_file.txt  make-lists.sh
e1039-analysis/HitEmbedding/macro_gen_emb/: Fun4Sim.C  README.md  gridrun.sh  gridsub.sh
e1039-analysis/HitEmbedding/macro_gen_emb_e906/: Fun4All.C  README.md  gridrun.sh  gridsub.sh  list_spill_good.txt  merge-emb-file.sh  prestage-input-file.sh
e1039-analysis/HitEmbedding/macro_gen_signal/: Fun4Sim.C  README.md  gridrun.sh  gridsub.sh
e1039-analysis/HitEmbedding/src/: AnaCleanAndMessyData.cc  AnaCleanAndMessyData.h  AnaEmbeddedData.cc  AnaEmbeddedData.h  CMakeLists.txt  CalibXTv2.cc  CalibXTv2.h  DoEmbedding.cc  FilterE906Nim3.cc  FilterE906Nim3.h  GenEmbeddingData.cc  GenEmbeddingData.h  LinkDef.h  TreeData.cc  TreeData.h
e1039-analysis/SimHits/: README.MD  setup.sh  setup_mye1039.sh
e1039-analysis/SimHits/AnaModule/: LinkDef.h
e1039-analysis/SimHits/data/alignment/: align_mille.txt
e1039-analysis/SimHits/data/klong/: fixed_klong_test.txt
e1039-analysis/SimHits/data/pythiaconfig/: phpythia8_DY.cfg
e1039-analysis/SimHits/macro/: Brem_-6.0.txt  Brem_toSubmit.txt  DPTrigger_road16.txt  Eta_-6.0.txt  Fun4DB.C  Fun4DQ.C  Fun4Sim.C  Fun4SimDst.C  Fun4SimHit.C  Fun4Sim_Ap2Muons.C  Fun4Sim_Muon.C  Fun4Sim_MuonGun.C  Fun4Sim_Muons.C  G4_EMCal.C  G4_SensitiveDetectors.C  G4_Target.C  README.MD  RecoE1039Sim.C  RunEmbedding.C  ana.C  disp_geom.C  gridrun.sh  gridsub.sh  run7_sim.opts  run_electrons.sh  run_multi.py  run_sim.py  run_trimuon.sh  setup-jobsub-spinquest.sh
e1039-analysis/SimHits/macro/grid/: Eta_toSubmit.txt  gridrun.sh  gridrun_new.sh  gridsub.sh  submit_electrons.sh
e1039-analysis/SimHits/oldSimEval/: #SimEval.cc#  SimEval.cc  SimEval.h
e1039-analysis/SimHits/src/: CMakeLists.txt  DoEmbedding.h  LinkDef.h  SimAna.cc  SimAna.h  SimAnaLinkDef.h  SimEval.cc  SimEval.h  SimEvalLinkDef.h
e1039-analysis/dimuon_python/: Apmuons_tracking_1_10k_statistics_p_resolution.ipynb  Apmuons_tracking_2_acceptanceScan.ipynb  Apmuons_tracking_3_acceptanceScan_trigger.ipynb  Apmuons_tracking_4_acceptanceScan_mass.ipynb  Apmuons_tracking_5_acceptanceScan_muon_gun.ipynb  DY_tracking_1.ipynb  DY_tracking_2_50k_statistics.ipynb  DY_tracking_3_split_by_charge.ipynb  DY_tracking_4_100k_statistics.ipynb  DY_tracking_5_100k_statistics_p_resolution.ipynb  DY_tracking_6_100k_statistics_Singlep_resolution.ipynb  DarkPhoton_1_mass_res.ipynb  Jpsi_tracking_1.ipynb  ML_tracking_1.ipynb  ML_tracking_2_more_experiments.ipynb  ML_tracking_3_more_experiments_arch.ipynb  ML_tracking_4_DY.ipynb  README.md  displaced_tracking_1.ipynb  displaced_tracking_2_general_matching.ipynb  displaced_tracking_3_pz matching.ipynb  displaced_tracking_4_p_resolution.ipynb  environment.yml
e1039-analysis/dimuon_python/ML_dataset/: X_track_reco.npy  X_track_reco_DY.npy  y_track_reco.npy  y_track_reco_DY.npy
e1039-analysis/python/: 2017data_withDP.ipynb  AnalysisTutorial_withAprimeSignals.ipynb  DisplacedTracking.ipynb  ECALTowers.ipynb  ECAL_acceptance.ipynb  EMCALClusters.ipynb  EMCALClusters_v2.ipynb  EMCAL_acceptance.ipynb  EMCAL_hits.ipynb  FINAL_acceptance.py  Occupancy_studies.ipynb  README.MD  SQ-Ecal-towers.py  TrackingPerformance.ipynb  cuts_signal.ipynb  from_sim_eval.ipynb  plot_efficiency.py  plot_efficiency_2d.py  tracklet_2017data.ipynb
lhe/: Brem_muons_500_600.txt  DQ-acceptance.ipynb  Eta_muons_500_600.txt  README.md  run_dielectron.sh  run_dimuon.sh  run_signal.sh  run_signal_newSamples.sh
lhe/data/: AprimeToMuonsRate_Brem.txt  AprimeToMuonsRate_Eta.txt  BFtoElectrons.txt  BFtoMuons.txt  BremYield.txt  EtaYield.txt  PionYield.txt  brem_yields_muons.txt  eta_yields_muons.txt  output_electrons_500_600.txt  output_electrons_500_600_v3.txt  output_muons_500_600.txt  parse_calchep.py
lhe/data/iron/: 15beam0.1mass.txt  15beam0.3mass.txt  15beam0.3mass_hepmc.txt.hepmc  15beam0.5mass.txt  15beam0.5mass_hepmc.txt.hepmc  15beam0.7mass.txt  15beam0.7mass_hepmc.txt.hepmc  15beam0.9mass.txt  15beam0.9mass_hepmc.txt.hepmc  20beam0.1mass.txt  20beam0.3mass.txt  20beam0.3mass_hepmc.txt.hepmc  20beam0.5mass.txt  20beam0.5mass_hepmc.txt.hepmc  20beam0.7mass.txt  20beam0.7mass_hepmc.txt.hepmc  20beam0.9mass.txt  20beam0.9mass_hepmc.txt.hepmc  eventsParser.py
lhe/data/klong/: get_distributions.py  klong_pythia.py
lhe/include/: yieldHelper.h
lhe/outputs/: output_electrons_500_600_Brem_Apr22_10000evts.txt  output_electrons_500_600_Brem_Apr22_up10evts.txt  output_electrons_500_600_Eta_Apr22_10000evts.txt  output_electrons_500_600_Eta_Apr22_up10evts.txt  output_electrons_500_600_v2.txt  output_electrons_500_600_v3.txt  output_electrons_500_600_v3_2.txt  output_muons_500_600_v4.txt
lhe/python/: DQ-acceptance.ipynb  DQ-acceptance_new.ipynb  LHEAnalyzer.ipynb  utils.py
lhe/python/old/: DQ-acceptance.ipynb
lhe/src/: Makefile  displacedHepmc.cc  trimuonHepmc.cc
(+20 files in other folders)
